--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension HTML::TokeParser::Simple.
 
+3.16  2013-06-26
+      Fix POD errors and move POD tests to XT directory.
+      Fix spelling errors.
+
 3.15  2005-11-29
       Fixed bug where rewrite_tag would unescape entities.  Thanks to "Paul
       Bijnens" <paul.bijnens@xplanation.com> for the bug report and fix.
